--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   </head>
   <body>
     <h1>Assignment submission for Spyne</h1>
+    <a class="btn btn-primary" href="/user/">Go to user actions</a>
   </body>
 </html>
