--- a/public/user.html
+++ b/public/user.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container">
       <h1>User List</h1>
-      <div class="row">
+      <div class="row forms-content">
         <div class="col">
           <form id="userForm" class="mb-4">
             <h3>Add User</h3>
